--- a/test/fixtures/nicks.yml
+++ b/test/fixtures/nicks.yml
@@ -2,3 +2,15 @@ matz:
   value: Matz
   account: matz
 
+
+# == Schema Information
+#
+# Table name: nicks
+#
+#  id         :integer         not null, primary key
+#  value      :string(255)
+#  account_id :integer
+#  created_at :datetime
+#  updated_at :datetime
+#
+
