--- a/test/fixtures/services.yml
+++ b/test/fixtures/services.yml
@@ -22,3 +22,16 @@ github:
   name: github
   key: matz
   account: matz
+
+# == Schema Information
+#
+# Table name: services
+#
+#  id         :integer         not null, primary key
+#  name       :string(255)
+#  key        :string(255)
+#  account_id :integer
+#  created_at :datetime
+#  updated_at :datetime
+#
+
