--- a/test/fixtures/sites.yml
+++ b/test/fixtures/sites.yml
@@ -4,3 +4,18 @@ matz_nikki:
   feed: http://www.rubyist.net/~matz/comments.rdf
   lang: ja
   account: matz
+
+# == Schema Information
+#
+# Table name: sites
+#
+#  id         :integer         not null, primary key
+#  title      :string(255)
+#  url        :string(255)
+#  feed       :string(255)
+#  lang       :string(255)
+#  account_id :integer
+#  created_at :datetime
+#  updated_at :datetime
+#
+
