--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -17,3 +17,15 @@ four:
 five:
   key: '9784873110233'
   account: matz
+
+# == Schema Information
+#
+# Table name: books
+#
+#  id         :integer         not null, primary key
+#  key        :string(255)
+#  account_id :integer
+#  created_at :datetime
+#  updated_at :datetime
+#
+
