--- a/test/fixtures/portraits.yml
+++ b/test/fixtures/portraits.yml
@@ -1,3 +1,15 @@
 matz:
   url: 'http://upload.wikimedia.org/wikipedia/commons/7/76/Yukihiro_Matsumoto.JPG'
   account: matz
+
+# == Schema Information
+#
+# Table name: portraits
+#
+#  id         :integer         not null, primary key
+#  url        :string(255)
+#  account_id :integer
+#  created_at :datetime
+#  updated_at :datetime
+#
+
