--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@
 # Be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
 development:
-  adapter: sqlite3
+  adapter: jdbcmysql
   database: db/development.sqlite3
   pool: 5
   timeout: 5000
