fixing books fixtures

--- a/test/fixtures/books.yml
+++ b/test/fixtures/books.yml
@@ -1,19 +1,24 @@
 one:
   key: '9780596516178'
   account: matz
+  isbn: '12345'
 
 two:
   key: '9780596002145'
   account: matz
+  isbn: '12345'
 
 three:
   key: '9784756132543'
   account: matz
+  isbn: '12345'
 
 four:
   key: '9784274064616'
   account: matz
+  isbn: '12345'
 
 five:
   key: '9784873110233'
   account: matz
+  isbn: '12345'
